--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif; /* Font per tutti i testi */
-            background-color: #b6C1ad; /* Sfondo verde salvia - il tuo colore aggiornato */
-            color: #B27777; /* Colore del testo principale: Rosa antico */
+            background-color: #B27777; /* Sfondo verde salvia - il tuo colore aggiornato */
+            color: #b6C1ad /* Colore del testo principale: Rosa antico */
             line-height: 1.6;
             position: relative; /* Necessario per posizionamento assoluto se aggiungiamo elementi */
             overflow-x: hidden; /* Evita scroll orizzontale */
