--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             font-family: 'Montserrat', sans-serif; /* Font per tutti i testi */
             background-color: #B27777; /* Sfondo verde salvia - il tuo colore aggiornato */
-            color: #b6C1ad /* Colore del testo principale: Rosa antico */
+            color: #B27777 /* Colore del testo principale: Rosa antico */
             line-height: 1.6;
             position: relative; /* Necessario per posizionamento assoluto se aggiungiamo elementi */
             overflow-x: hidden; /* Evita scroll orizzontale */
@@ -46,14 +46,14 @@
         header h1 {
             font-family: 'Great Vibes', cursive; /* Font per l'intestazione H1 */
             font-size: 3.5rem; /* Dimensione grande per l'intestazione principale */
-            color: #b6C1ad; /* Colore rosa antico per l'intestazione */
+            color: #B27777; /* Colore rosa antico per l'intestazione */
             margin: 0;
         }
 
         header h2 {
             font-family: 'Montserrat', sans-serif; /* Font per la sotto-intestazione H2 */
             font-size: 1.5rem;
-            color: #b6C1ad; /* Colore rosa antico */
+            color: #B27777; /* Colore rosa antico */
             margin-top: 0.5rem;
         }
 
@@ -75,7 +75,7 @@
         h3 {
             font-family: 'Montserrat', sans-serif; /* Font per i titoli H3 */
             font-size: 2rem;
-            color: #b6C1ad; /* Colore rosa antico per i titoli H3 */
+            color: #B27777; /* Colore rosa antico per i titoli H3 */
             text-align: center; /* Mantenuto per i titoli H3 */
             margin-top: 0;
             margin-bottom: 1.5rem;
@@ -83,7 +83,7 @@
 
         p, li {
             font-family: 'Montserrat', sans-serif; /* Assicura che anche p e li usino Montserrat */
-            color: #b6C1ad; /* Colore rosa antico per paragrafi e liste */
+            color: #B27777; /* Colore rosa antico per paragrafi e liste */
         }
 
         /* Stile per parole evidenziate */
@@ -98,7 +98,7 @@
             text-align: center;
             padding: 0.6rem;
             font-size: 0.9rem;
-            color: #b6C1ad; /* Colore rosa antico per il footer */
+            color: #B27777; /* Colore rosa antico per il footer */
             border-radius: 15px 15px 0 0; /* Angoli arrotondati solo in alto */
             margin-top: 2rem;
             box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
@@ -109,7 +109,7 @@
             display: block;
             margin-top: 1rem;
             margin-bottom: 0.5rem;
-            color: #b6C1ad;
+            color: #B27777;
             font-weight: 600; /* Rendi le label più in evidenza */
         }
 
@@ -127,7 +127,7 @@
             border: 1px solid rgba(178, 119, 119, 0.5); /* Bordo con tonalità rosa antico */
             border-radius: 5px;
             background-color: rgba(255, 255, 255, 0.7); /* Sfondo input più opaco per leggibilità */
-            color: #b6C1ad; /* Testo input rosa antico */
+            color: #B27777; /* Testo input rosa antico */
         }
 
         form input::placeholder,
@@ -137,7 +137,7 @@
 
         form select option {
             background-color: #F0F0F0; /* Sfondo opzioni del select leggermente diverso */
-            color: #b6C1ad; /* Testo opzioni del select rosa antico */
+            color: #B27777; /* Testo opzioni del select rosa antico */
         }
         
         /* Stili specifici per i checkbox/radio (preferenze menù) */
@@ -172,12 +172,12 @@
             font-weight: normal; /* Le label interne non devono essere in grassetto */
             margin-top: 0.5rem;
             margin-bottom: 0.2rem;
-            color: #b6C1ad;
+            color: #B27777;
         }
 
 
         form button {
-            background-color: #b6C1ad; /* Pulsante del form: colore rosa antico */
+            background-color: #B27777; /* Pulsante del form: colore rosa antico */
             color: white;
             border: none;
             cursor: pointer;
@@ -217,26 +217,26 @@
         .program-time {
             font-family: 'Great Vibes', cursive;
             font-size: 2rem;
-            color: #b6C1ad;
+            color: #B27777;
             margin-bottom: 5px;
         }
 
         .program-icon {
             font-size: 2.5rem;
             margin-bottom: 10px;
-            color: #b6C1ad;
+            color: #B27777;
         }
 
         .program-description {
             font-size: 1rem;
-            color: #b6C1ad;
+            color: #B27777;
             margin: 0;
         }
 
         .program-item + .program-item::before {
             content: '↓';
             font-size: 2rem;
-            color: #b6C1ad;
+            color: #B27777;
             margin: -10px 0;
             z-index: 2;
         }
