--- a/index.html
+++ b/index.html
@@ -343,14 +343,15 @@
 
     <main>
         <section id="programma">
-            <h3>Programma della giornata</h3>
-            <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
-            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento<br>di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
+            <h3>CI SPOSIAMO!! 🎉</h3>
+            <p>Sì, è tutto vero… </p>
+            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
+            <p><span class="big-word"><strong>Siamo lieti di invitarvi al nostro matrimonio</strong></span></p>
             <p>La cerimonia ed il ricevimento si svolgeranno </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025</strong></span></p>
             <p>presso </p>
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
-            <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
+            <p>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</p>
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
 
