--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <h3>CI SPOSIAMO!! 🎉</h3>
             <p>Sì, è tutto vero… </p>
             <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
-            <p><span class="big-word"><strong>Siamo lieti di invitarvi al nostro matrimonio</strong></span></p>
+            <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span></p>
             <p>La cerimonia ed il ricevimento si svolgeranno </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025</strong></span></p>
             <p>presso </p>
