--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             line-height: 1.6;
             position: relative; /* Necessario per posizionamento assoluto se aggiungiamo elementi */
             overflow-x: hidden; /* Evita scroll orizzontale */
+            scroll-behavior: smooth; /* Per lo scroll fluido */
         }
 
         /* Aggiungiamo box-sizing universale per un migliore controllo del layout */
@@ -61,7 +62,6 @@
             margin-top: 0.5rem;
         }
 
-        /* MODIFICHE CHIAVE QUI PER LE SEZIONI */
         section {
             background-color: rgba(255, 255, 255, 0.9); /* Sfondo semi-trasparente per le sezioni */
             padding: 2rem; /* Padding base */
@@ -70,6 +70,11 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.15);
             width: 90%; /* Occupa il 90% della larghezza disponibile */
             max-width: 600px; /* Ma non supera mai i 600px */
+        }
+
+        /* Nascondi la sezione RSVP di default */
+        #rsvp {
+            display: none;
         }
 
         /* Stile specifico per centrare la sezione programma */
@@ -180,20 +185,26 @@
             color: #B27777;
         }
 
-        form button {
-            background-color: #B27777; /* Pulsante del form: colore rosa antico */
+        /* Stile generale per i bottoni */
+        .action-button { /* Usiamo una classe specifica per i bottoni di azione come "Conferma" */
+            background-color: #B27777; /* Pulsante: colore rosa antico */
             color: white;
             border: none;
             cursor: pointer;
             padding: 0.8rem 1.5rem;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
-            display: block; /* Per centrare il pulsante se necessario */
-            margin: 2rem auto 0; /* Centra il pulsante nel modulo */
+            transition: background-color 0.3s ease, transform 0.2s ease; /* Aggiungi transizione per transform */
+            display: inline-block; /* Per permettere margin-top e margin-bottom */
+            text-decoration: none; /* Rimuovi sottolineatura dai link che sembrano bottoni */
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1rem;
+            margin-top: 2rem; /* Aggiungi un po' di spazio sopra il bottone */
+            margin-bottom: 1rem; /* Aggiungi un po' di spazio sotto il bottone */
         }
 
-        form button:hover {
+        .action-button:hover {
             background-color: #A06060; /* Colore più scuro al passaggio del mouse */
+            transform: translateY(-2px); /* Piccolo effetto di sollevamento */
         }
 
         /* Stili per la sezione Programma della giornata */
@@ -294,6 +305,11 @@
             .program-item {
                 width: 95%; /* Occupa quasi tutta la larghezza della sezione genitore */
             }
+
+            .action-button {
+                font-size: 0.9rem; /* Riduci la dimensione del testo del bottone su tablet */
+                padding: 0.7rem 1.2rem;
+            }
         }
 
         /* Stili per schermi fino a 480px (smartphone) */
@@ -307,7 +323,6 @@
             }
 
             section {
-                /* Ridotto ulteriormente il padding per dare più spazio al width */
                 padding: 1rem; /* Padding ancora più ridotto */
                 margin: 1rem auto; /* Margine ancora più ridotto */
                 border-radius: 10px; /* Angoli leggermente più piccoli */
@@ -323,13 +338,17 @@
                 font-size: 0.9rem; /* Dimensione base per il testo su smartphone */
             }
 
-            /* Rivedere gli input del form se continuano ad essere troppo larghi */
             form input[type="text"],
             form input[type="email"],
             form input[type="number"],
             form textarea,
             form select {
-                padding: 0.75rem; /* Potresti voler rimuovere il padding orizzontale extra */
+                padding: 0.6rem 0.8rem; /* Ridotto leggermente il padding degli input */
+            }
+
+            .action-button {
+                font-size: 0.8rem; /* Riduci la dimensione del testo del bottone su smartphone */
+                padding: 0.6rem 1rem;
             }
         }
     </style>
@@ -343,16 +362,16 @@
 
     <main>
         <section id="programma">
-            <h3>CI SPOSIAMO!! 🎉</h3>
-            <p>Sì, è tutto vero… </p>
-            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
-            <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span></p>
+            <h3>Programma della giornata</h3>
+            <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
+            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento<br>di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
             <p>La cerimonia ed il ricevimento si svolgeranno </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025</strong></span></p>
             <p>presso </p>
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
-            <p>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</p>
+            <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
+            <button id="showRsvpButton" class="action-button">Conferma la Tua Presenza</button>
         </section>
 
         <section id="rsvp">
@@ -443,8 +462,31 @@
         // Seleziona il campo input del numero di persone
         const numGuestsInput = document.getElementById('num_guests');
 
-        // Genera i campi menù all'avvio della pagina (per il valore iniziale di 1)
-        generateMenuPreferences(parseInt(numGuestsInput.value));
+        // Seleziona il pulsante per mostrare RSVP
+        const showRsvpButton = document.getElementById('showRsvpButton');
+        // Seleziona la sezione RSVP
+        const rsvpSection = document.getElementById('rsvp');
+
+        // Aggiungi un listener per il click sul pulsante "Conferma la Tua Presenza"
+        showRsvpButton.addEventListener('click', () => {
+            // Rendi visibile la sezione RSVP
+            rsvpSection.style.display = 'block'; // O 'flex' se in futuro userai flexbox per la sezione
+
+            // Scorri la pagina fino alla sezione RSVP
+            rsvpSection.scrollIntoView({ behavior: 'smooth' });
+
+            // (Opzionale) Puoi nascondere il pulsante dopo che è stato cliccato
+            // showRsvpButton.style.display = 'none';
+
+            // Genera le preferenze del menù per il numero iniziale di ospiti (di solito 1)
+            // Questo è importante perché la sezione RSVP è nascosta all'inizio
+            generateMenuPreferences(parseInt(numGuestsInput.value));
+        });
+
+
+        // Genera i campi menù all'avvio della pagina (per il valore iniziale di 1),
+        // ma solo se la sezione RSVP è già visibile (che inizialmente non lo è)
+        // generateMenuPreferences(parseInt(numGuestsInput.value)); <-- Rimosso da qui
 
         // Aggiungi un "listener" per quando il valore del campo cambia
         numGuestsInput.addEventListener('change', (event) => {
