--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
             align-items: center; /* Centra verticalmente il contenuto */
             justify-content: center; /* Centra orizzontalmente il contenuto */
             flex-direction: column; /* Imposta la direzione dei flex item in colonna */
-            /* Assicurati che NON ci sia un background-color che possa coprire l'immagine */
-            /* background-color: transparent; <-- Se hai un colore di sfondo, prova a metterlo trasparente o rimuovilo */
         }
         header h1 {
             font-family: 'Great Vibes', cursive; /* Font per l'intestazione H1 */
@@ -100,7 +98,6 @@
         .big-word {
             font-size: 1.2em; /* La parola sarà il 20% più grande del testo circostante */
             font-weight: bold; /* Opzionale: per renderla anche in grassetto */
-            /* color: #8C5A5A; */ /* Opzionale: un colore diverso per risaltare, se lo desideri */
         }
 
         footer {
@@ -124,7 +121,7 @@
         }
 
         form input[type="text"],
-        form input[type="email"], /* Aggiunto campo email per comodità */
+        form input[type="email"],
         form input[type="number"],
         form textarea,
         form select {
@@ -165,9 +162,9 @@
             font-weight: normal; /* Non grassetto per le opzioni */
         }
 
-        .menu-option input[type="radio"] { /* Cambiato da checkbox a radio per scelta singola per persona */
-            display: inline-block; /* Per allineare il radio button con la label */
-            width: auto; /* Annulla il width: 100% per i radio button */
+        .menu-option input[type="radio"] {
+            display: inline-block;
+            width: auto;
             margin-right: 5px;
         }
         /* Stile per i gruppi dinamici di preferenze menù */
@@ -179,32 +176,32 @@
             border: 1px solid rgba(178, 119, 119, 0.2);
         }
         .guest-menu-preference label {
-            font-weight: normal; /* Le label interne non devono essere in grassetto */
+            font-weight: normal;
             margin-top: 0.5rem;
             margin-bottom: 0.2rem;
             color: #B27777;
         }
 
-        /* Stile generale per i bottoni */
-        .action-button { /* Usiamo una classe specifica per i bottoni di azione come "Conferma" */
-            background-color: #B27777; /* Pulsante: colore rosa antico */
+        /* Stile generale per i bottoni di azione (es. Conferma presenza) */
+        .action-button {
+            background-color: #B27777;
             color: white;
             border: none;
             cursor: pointer;
             padding: 0.8rem 1.5rem;
             border-radius: 5px;
-            transition: background-color 0.3s ease, transform 0.2s ease; /* Aggiungi transizione per transform */
-            display: inline-block; /* Per permettere margin-top e margin-bottom */
-            text-decoration: none; /* Rimuovi sottolineatura dai link che sembrano bottoni */
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            display: inline-block;
+            text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-size: 1rem;
-            margin-top: 2rem; /* Aggiungi un po' di spazio sopra il bottone */
-            margin-bottom: 1rem; /* Aggiungi un po' di spazio sotto il bottone */
+            margin-top: 2rem;
+            margin-bottom: 1rem;
         }
 
         .action-button:hover {
-            background-color: #A06060; /* Colore più scuro al passaggio del mouse */
-            transform: translateY(-2px); /* Piccolo effetto di sollevamento */
+            background-color: #A06060;
+            transform: translateY(-2px);
         }
 
         /* Stili per la sezione Programma della giornata */
@@ -221,10 +218,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.7); /* Sfondo item programma leggermente più opaco */
+            background-color: rgba(255, 255, 255, 0.7);
             padding: 15px 20px;
             border-radius: 10px;
-            width: 90%; /* Occupa il 90% della larghezza della sezione genitore */
+            width: 90%;
             max-width: 400px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -258,8 +255,7 @@
 
         /* Stili per la sezione Regalo di Nozze */
         .gift-section {
-            /* Mantiene gli stili della sezione generica */
-            text-align: center; /* Centra il testo all'interno della sezione regalo */
+            text-align: center;
         }
 
         .gift-section p {
@@ -269,7 +265,7 @@
 
         .gift-section strong {
             font-size: 1.4rem;
-            display: block; /* Metti l'IBAN su una nuova riga */
+            display: block;
             margin-top: 1rem;
         }
 
@@ -280,34 +276,34 @@
         /* Stili per schermi fino a 768px (tablet e smartphone più grandi) */
         @media screen and (max-width: 768px) {
             header h1 {
-                font-size: 2.8rem; /* Riduci la dimensione di H1 */
+                font-size: 2.8rem;
             }
 
             header h2 {
-                font-size: 1.2rem; /* Riduci la dimensione di H2 */
+                font-size: 1.2rem;
             }
 
             section {
-                padding: 1.5rem; /* Riduci il padding delle sezioni */
-                margin: 1.5rem auto; /* Riduci il margine verticale */
-                width: 90%; /* Occupa il 90% della larghezza dello schermo */
-                max-width: 500px; /* Riduci max-width per tablet */
+                padding: 1.5rem;
+                margin: 1.5rem auto;
+                width: 90%;
+                max-width: 500px;
             }
 
             h3 {
-                font-size: 1.8rem; /* Riduci la dimensione di H3 */
+                font-size: 1.8rem;
             }
 
             p, li {
-                font-size: 0.95rem; /* Riduci leggermente la dimensione del testo dei paragrafi */
+                font-size: 0.95rem;
             }
 
             .program-item {
-                width: 95%; /* Occupa quasi tutta la larghezza della sezione genitore */
+                width: 95%;
             }
 
             .action-button {
-                font-size: 0.9rem; /* Riduci la dimensione del testo del bottone su tablet */
+                font-size: 0.9rem;
                 padding: 0.7rem 1.2rem;
             }
         }
@@ -315,27 +311,27 @@
         /* Stili per schermi fino a 480px (smartphone) */
         @media screen and (max-width: 480px) {
             header h1 {
-                font-size: 2.2rem; /* Ancora più piccolo su smartphone */
+                font-size: 2.2rem;
             }
 
             header h2 {
-                font-size: 1rem; /* Dimensione minima per H2 */
+                font-size: 1rem;
             }
 
             section {
-                padding: 1rem; /* Padding ancora più ridotto */
-                margin: 1rem auto; /* Margine ancora più ridotto */
-                border-radius: 10px; /* Angoli leggermente più piccoli */
-                width: 90%; /* Mantenuto 90% per lasciare un margine visibile */
-                max-width: none; /* Annulla il max-width precedente */
+                padding: 1rem;
+                margin: 1rem auto;
+                border-radius: 10px;
+                width: 90%;
+                max-width: none;
             }
 
             h3 {
-                font-size: 1.5rem; /* Dimensione minima per H3 */
+                font-size: 1.5rem;
             }
 
             p, li {
-                font-size: 0.9rem; /* Dimensione base per il testo su smartphone */
+                font-size: 0.9rem;
             }
 
             form input[type="text"],
@@ -343,11 +339,11 @@
             form input[type="number"],
             form textarea,
             form select {
-                padding: 0.6rem 0.8rem; /* Ridotto leggermente il padding degli input */
+                padding: 0.6rem 0.8rem;
             }
 
             .action-button {
-                font-size: 0.8rem; /* Riduci la dimensione del testo del bottone su smartphone */
+                font-size: 0.8rem;
                 padding: 0.6rem 1rem;
             }
         }
@@ -470,23 +466,15 @@
         // Aggiungi un listener per il click sul pulsante "Conferma la Tua Presenza"
         showRsvpButton.addEventListener('click', () => {
             // Rendi visibile la sezione RSVP
-            rsvpSection.style.display = 'block'; // O 'flex' se in futuro userai flexbox per la sezione
+            rsvpSection.style.display = 'block'; // Ora la sezione apparirà
 
             // Scorri la pagina fino alla sezione RSVP
             rsvpSection.scrollIntoView({ behavior: 'smooth' });
-
-            // (Opzionale) Puoi nascondere il pulsante dopo che è stato cliccato
-            // showRsvpButton.style.display = 'none';
 
             // Genera le preferenze del menù per il numero iniziale di ospiti (di solito 1)
             // Questo è importante perché la sezione RSVP è nascosta all'inizio
             generateMenuPreferences(parseInt(numGuestsInput.value));
         });
-
-
-        // Genera i campi menù all'avvio della pagina (per il valore iniziale di 1),
-        // ma solo se la sezione RSVP è già visibile (che inizialmente non lo è)
-        // generateMenuPreferences(parseInt(numGuestsInput.value)); <-- Rimosso da qui
 
         // Aggiungi un "listener" per quando il valore del campo cambia
         numGuestsInput.addEventListener('change', (event) => {
