--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
             <p>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</p>
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
+            <button id="showRsvpButton" class="action-button">Conferma la Tua Presenza</button> 
         </section>
 
         </section>
