--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
 
     <footer>
         <div class="container">
+            <button id="showRsvpButton" class="action-button">Conferma la Tua Presenza</button> 
             <p>&copy; 13/09/2025 Mirko & Elena</p>
         </div>
     </footer>
