--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><span class="big-word">Elena<br>❤️<br> Mirko</span></h1>
+            <h1><span class="big-word">Elena  ❤️  Mirko</span></h1>
         </div>
     </header>
 
