--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         header {
-            background-image: url('IMG-20240922-WA0011.jpg'); /* ASSICURATI CHE L'URL SIA ESATTO - Ho usato il nome del file caricato */
+            background-image: url('img/IMG-20240922-WA0011.jpg'); /* ASSICURATI CHE L'URL SIA ESATTO - Ho usato il nome del file caricato */
             background-size: cover; /* L'immagine coprirà l'intera area dell'header */
             background-position: bottom center; /* Posiziona l'immagine in basso e centrata */
             background-repeat: no-repeat; /* Impedisce all'immagine di ripetersi */
