--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             font-size: 3.5rem; /* Dimensione grande per l'intestazione principale */
             color: #B27777; /* Colore rosa antico per l'intestazione */
             margin: 0;
+            white-space: nowrap; /* Impedisce al testo di andare a capo */
+            overflow: hidden;     /* Nasconde il contenuto che eccede i bordi */
+            text-overflow: ellipsis; /* Aggiunge "..." se il testo viene tagliato (opzionale) */
         }
 
         header h2 {
