--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             justify-content: center; /* Centra orizzontalmente il contenuto */
             flex-direction: column; /* Imposta la direzione dei flex item in colonna */
         }
+/* --- INCOLLA QUI LA SEZIONE CHE TI HO FORNITO --- */
+    @media screen and (min-width: 769px) {
+        header {
+            min-height: 400px; /* Altezza maggiore per desktop/tablet */
+        }
+    }
+    /* --- FINE INCOLLATURA --- */
         header h1 {
             font-family: 'Great Vibes', cursive; /* Font per l'intestazione H1 */
             font-size: 3.5rem; /* Dimensione grande per l'intestazione principale */
