--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <body>
     <header>
         <div class="container">
-            <h1><span class="big-word">Elena  ❤️  Mirko</span></h1>
+            <h1>❤️<br><span class="big-word">Elena & Mirko</span></h1>
         </div>
     </header>
 
