--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         header {
-            background-image: url('IMG-20240922-WA0011.jpg'); /* ASSICURATI CHE L'URL SIA ESATTO */
+            background-image: url('img/IMG-20240922-WA0011.jpg'); /* ASSICURATI CHE L'URL SIA ESATTO */
             background-size: cover;
             background-position: bottom center;
             background-repeat: no-repeat;
