--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     }
 
     header {
-        /* Ho corretto l'URL dell'immagine per la cartella 'img/' */
         background-image: url('img/IMG-20240922-WA0011.jpg');
         background-size: cover;
         background-position: bottom center;
@@ -63,6 +62,7 @@
         justify-content: center;
         flex-direction: column;
     }
+
     /* REGOLE PER IL TESTO "ELENA ❤️ MIRKO" CHE NON VADA A CAPO */
     header h1 {
         font-family: 'Great Vibes', cursive;
@@ -297,29 +297,36 @@
         }
     }
 
-    /* Media Queries per Ottimizzazione Responsive (dimensioni generali per i testi e sezioni) */
+    /* Media Queries per Ottimizzazione Responsive (dimensioni generali) */
     @media screen and (max-width: 768px) {
         header h1 {
             font-size: 2.8rem;
         }
+
         header h2 {
             font-size: 1.2rem;
         }
+
         section {
             padding: 1.5rem;
             margin: 1.5rem auto;
             width: 90%;
             max-width: 500px;
         }
+
         h3 {
             font-size: 1.8rem;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 0.95rem;
         }
+
         .program-item {
             width: 95%;
         }
+
         .action-button {
             font-size: 0.9rem;
             padding: 0.7rem 1.2rem;
@@ -330,9 +337,11 @@
         header h1 {
             font-size: 2.2rem;
         }
+
         header h2 {
             font-size: 1rem;
         }
+
         section {
             padding: 1rem;
             margin: 1rem auto;
@@ -340,12 +349,16 @@
             width: 90%;
             max-width: none;
         }
+
         h3 {
             font-size: 1.5rem;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 0.9rem;
         }
+
         form input[type="text"],
         form input[type="email"],
         form input[type="number"],
@@ -353,6 +366,7 @@
         form select {
             padding: 0.6rem 0.8rem;
         }
+
         .action-button {
             font-size: 0.8rem;
             padding: 0.6rem 1rem;
@@ -365,18 +379,18 @@
         body {
             display: none; /* Nasconde tutto il contenuto del body del sito */
         }
+
         .desktop-message-container {
             display: flex; /* Mostra il messaggio per desktop */
         }
     }
 </style>
-</head>
-<body>
-    <div class="desktop-message-container">
-        <h1>Sito Ottimizzato per Smartphone</h1>
-        <p>Per una migliore esperienza, ti preghiamo di visualizzare questo sito dal tuo smartphone.</p>
-        <p>Inquadra il QR code sulla partecipazione per accedere direttamente.</p>
-    </div>
+<div class="desktop-message-container">
+    <h1>Sito Ottimizzato per Smartphone</h1>
+    <p>Per una migliore esperienza, ti preghiamo di visualizzare questo sito dal tuo smartphone.</p>
+    <p>Inquadra il QR code che vedi sulla partecipazione o qui riportato per accedere direttamente.</p>
+    <img src="http://googleusercontent.com/image_generation_content/6" alt="QR Code per il sito" style="max-width: 200px; margin-top: 1rem;">
+</div>
 
     <header>
         <div class="container">
