--- a/index.html
+++ b/index.html
@@ -206,25 +206,28 @@
         }
 
         .action-button {
-            background-color: #B27777;
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            display: block;
-            width: 100%;
-            text-decoration: none;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 1rem;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-        }
+        background-color: #B27777;
+        color: white;
+        border: none;
+        cursor: pointer;
+        /* Aumentiamo il padding verticale e orizzontale */
+        padding: 1.2rem 2.5rem; /* Aumentato il padding per renderlo più grande */
+        border-radius: 5px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        display: block;
+        width: 100%;
+        text-decoration: none;
+        font-family: 'Montserrat', sans-serif;
+        /* Aumentiamo la dimensione del font, simile a un h3 ma non uguale per mantenere gerarchia */
+        font-size: 1.8rem; /* Aumentato il font-size */
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
 
-        .action-button:hover {
-            background-color: #A06060;
-            transform: translateY(-2px);
+    .action-button:hover {
+        background-color: #A06060;
+        transform: translateY(-2px);
+    }
         }
 
         .program-timeline {
