--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <h1>Sito Ottimizzato per Smartphone</h1>
         <p>Per una migliore esperienza, ti preghiamo di visualizzare questo sito dal tuo smartphone.</p>
         <p>Inquadra il QR code che vedi sulla partecipazione o qui riportato per accedere direttamente.</p>
-        <img src="http://googleusercontent.com/image_generation_content/6" alt="QR Code per il sito" style="max-width: 200px; margin-top: 1rem;">
+        <<img src="img/tuo_qr_code.png" alt="QR Code per il sito" style="max-width: 200px; margin-top: 1rem;"
     </div>
 
     <header>
