--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <h1>Sito Ottimizzato per Smartphone</h1>
         <p>Per una migliore esperienza, ti preghiamo di visualizzare questo sito dal tuo smartphone.</p>
         <p>Inquadra il QR code che vedi sulla partecipazione o qui riportato per accedere direttamente.</p>
-        <img src="img/tuo_qr_code" alt="QR Code per il sito" style="max-width: 200px; margin-top: 1rem;">
+        <img src="img/tuo_qr_code.png" alt="QR Code per il sito" style="max-width: 200px; margin-top: 1rem;">
     </div>
 
     <header>
