--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
         </section>
 
         <section id="regalo-nozze">
-            <h3>Regalo di Nozze</h3>
-            <p style="text-align: center;">Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro <strong>sogno americano</strong><br>una spintarella verso la West Coast sarà più che apprezzata!<br>
+            <h3>il nostro sogno Americano...</h3>
+            <p style="text-align: center;">Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro sogno<br>una spintarella verso la West Coast sarà più che apprezzata!<br>
             Tra canyon mozzafiato, strade infinite e hamburger giganti, il vostro pensiero ci accompagnerà lungo ogni miglio.<br>
             Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna. 😉</p>
             <p style="text-align:center;"><strong>IBAN: IT26P080163532100000639848</strong></p>
